force-app/main/default/objects/Quote/fields/Necesita_aprobacion__c.field-meta.xml
<CustomField>
    <fullName>Necesita_aprobacion__c</fullName>
    <formula>IF(
    Discount &lt; 0.35,   
    &quot;No necesita pasar por un proceso de aprobacion ✅&quot;, 
    IF(
        Approved__c,  
        &quot;El proceso de aprobacion fue aprobado ✅&quot;,
        IF( Rejected__c ,
            &quot;El proceso de aprobacion fue rechazado ❌&quot;,
            &quot;Necesita pasar por el proceso de aprobacion 🚫&quot;
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Necesita aprobacion</label>
    <type>Text</type>
</CustomField>