force-app/main/default/objects/Quote/fields/Rejected__c.field-meta.xml
<CustomField>
    <fullName>Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>El proceso de aprobacion fue rechazado</description>
    <label>Rejected</label>
    <type>Checkbox</type>
</CustomField>