force-app/main/default/objects/Quote/validationRules/QUO0001_Need_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>QUO0001_Need_Approval</fullName>
    <active>true</active>
    <description>Necesita pasar por un proceso de aprobacion</description>
    <errorConditionFormula>AND(
				 ISCHANGED(IsSyncing),
				 IsSyncing ,
     Discount &gt;= 0.35,
    NOT( Approved__c ),
    NOT(  Rejected__c )
)</errorConditionFormula>
    <errorMessage>QUO0001: No se puede sincronizar el presupuesto ya que necesita pasar por un proceso de aprobacion</errorMessage>
</ValidationRule>